@@ -1,0 +1,5 @@
+It will be ``npm install``ed (or ``yarn``ed) in the normal way.
+Then just run `lerna`.
+That will re``bundle`` your app.
+&quot;``foo`` `bar`&quot;
+so `mono` man
