@@ -1,0 +1,4 @@
+I want you to *re*read the article.
+You will find that she is *right*.
+Ba*boom*.
+&copy;*the authors*
