@@ -11,6 +11,7 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 
 * add :wrap option to control line wrapping behavior (:ventilate, :none, and :preserve) (#11)
 * add --wrap CLI option to control :wrap option (#11)
+* add support for unconstrained formatting (em, strong, and codespan) (#6)
 
 === Changed
 
